--- a/src/templates/post.html
+++ b/src/templates/post.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -33,7 +33,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
       <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+        <a class="navbar-brand" href="/">Start Bootstrap</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -49,17 +49,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ms-auto py-4 py-lg-0">
             <li class="nav-item">
-              <a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html"
-                >About</a
-              >
+              <a class="nav-link px-lg-3 py-3 py-lg-4" href="about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html"
+              <a class="nav-link px-lg-3 py-3 py-lg-4" href="contact"
                 >Contact</a
               >
             </li>
@@ -70,7 +66,7 @@
     <!-- Page Header-->
     <header
       class="masthead"
-      style="background-image: url('../assets/img/post-bg.jpg')"
+      style="background-image: url(&quot;../assets/img/post-bg.jpg&quot;)"
     >
       <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
