--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -1,4 +1,5 @@
-<!doctype html>
+{% import "./macros/form.html" as forms %}
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -49,9 +50,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ms-auto py-4 py-lg-0">
             <li class="nav-item">
-              <a class="nav-link px-lg-3 py-3 py-lg-4" href="index"
-                >Home</a
-              >
+              <a class="nav-link px-lg-3 py-3 py-lg-4" href="index">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link px-lg-3 py-3 py-lg-4" href="about">About</a>
@@ -73,7 +72,7 @@
     <!-- Page Header-->
     <header
       class="masthead"
-      style="background-image: url(&quot;assets/img/contact-bg.jpg&quot;)"
+      style="background-image: url('assets/img/contact-bg.jpg')"
     >
       <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -105,13 +104,8 @@
               <!-- to get an API token!-->
               <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                 <div class="form-floating">
-                  <input
-                    class="form-control"
-                    id="name"
-                    type="text"
-                    placeholder="Enter your name..."
-                    data-sb-validations="required"
-                  />
+                  {{form.input("name","text","Enter your name...")}}
+
                   <label for="name">Name</label>
                   <div
                     class="invalid-feedback"
