--- a/src/views/post.html
+++ b/src/views/post.html
@@ -72,11 +72,11 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-md-10 col-lg-8 col-xl-7">
             <div class="post-heading">
-              <h1>{{post.title}}</h1>
+              <h1>{{post.title | safe}}</h1>
 
-              <h2 class="subheading">{{post.teaser}}</h2>
+              <h2 class="subheading">{{post.teaser | safe}}</h2>
               <span class="meta">
-                {{post.author}}
+                {{post.author | safe}}
                 <a href="#!">Start Bootstrap</a>
                 {{post.createdAt | formatDate}}
               </span>
@@ -90,7 +90,7 @@
       <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-md-10 col-lg-8 col-xl-7">
-            {{post.content}}
+            {{post.content | safe}}
             <a href="#!"
               ><img
                 class="img-fluid"
