--- a/src/views/about.html
+++ b/src/views/about.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -54,7 +54,7 @@
             <li class="nav-item">
               <a class="nav-link px-lg-3 py-3 py-lg-4" href="about">About</a>
             </li>
-          
+
             <li class="nav-item">
               <a class="nav-link px-lg-3 py-3 py-lg-4" href="contact"
                 >Contact</a
@@ -67,13 +67,13 @@
     <!-- Page Header-->
     <header
       class="masthead"
-      style="background-image: url(&quot;assets/img/about-bg.jpg&quot;)"
+      style="background-image: url('assets/img/about-bg.jpg')"
     >
       <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-md-10 col-lg-8 col-xl-7">
             <div class="page-heading">
-              <h1>About Me</h1>
+              <h1>{{headerData.title}}</h1>
               <span class="subheading">This is what I do.</span>
             </div>
           </div>
